# recasa

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  RELEASES.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  mastodon-post.txt  start.sh  todo.md
backend/: pyproject.toml  pytest.ini
backend/app/: config.py  database.py  main.py
backend/app/api/: config.py  directories.py  duplicates.py  events.py  locations.py  persons.py  photos.py  pipeline.py  pipeline_api.py  scan.py  tags.py  timeline.py  user_data.py
backend/app/models/: __init__.py  caption.py  config.py  duplicate.py  event.py  face.py  photo.py  tag.py
backend/app/schemas/: photo.py
backend/app/services/: captioner.py  clip_tagger.py  collage.py  event_detector.py  exif.py  face_detector.py  geocoder.py  hasher.py  motion_photo.py  scanner.py  thumbnail.py  user_data.py
backend/app/workers/: pipeline.py  queues.py  worker.py
backend/scripts/: benchmark_captioning.py
backend/tests/: conftest.py  test_captioning.py  test_consistency.py  test_exif.py  test_faces.py  test_geocoding.py  test_hashing.py  test_pipeline.py  test_scanner.py  test_thumbnails.py  utils.py
backend/tests/fixtures/: download_fixtures.py  manifest.json
backend/tests/fixtures/images/formats/: sample.heic
docs/: TESTING.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
frontend/playwright-report/: index.html
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CollagePopover.tsx  PhotoGrid.tsx  PhotoViewer.tsx  ScanProgress.tsx  SearchBar.tsx  Sidebar.tsx
frontend/src/hooks/: useScanStatus.ts  useScrollRestore.ts
frontend/src/pages/: Duplicates.tsx  Events.tsx  ExportImport.tsx  Favorites.tsx  Folders.tsx  Home.tsx  LargeFiles.tsx  Locations.tsx  MapView.tsx  People.tsx  PhotoPage.tsx  Pipeline.tsx  SearchResults.tsx  Tags.tsx  Years.tsx
frontend/src/store/: useStore.ts
frontend/tests/: pipeline.spec.ts
nginx/: nginx.conf
